--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <section>
           <h1>Reveal.js</h1>
           <h3>HTML Presentations Made Easy</h3>
-          <p><small>Created by <a href="http://hakim.se">Hakim El Hattab</a>/<a href="http://twitter.com/hakimel">@hakimel</a></small></p>
+          <p><small>
+              <Created>by <a href="http://hakim.se">Hakim El Hattab</a>/<a href="http://twitter.com/hakimel">@hakimel</a></Created></small></p>
         </section>
         <section>
           <h2>Heads Up</h2>
@@ -51,8 +52,7 @@
           <section>
             <h2>Vertical Slides</h2>
             <p>
-              Slides can be nested inside of other slides,
-              try pressing <a href="#" class="navigate-down">down</a>.
+              <Slides>can be nested inside of other slides, try pressing <a href="#" class="navigate-down">down</a>.</Slides>
             </p><a href="#" class="image navigate-down"><img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow"></a>
           </section>
           <section>
@@ -74,7 +74,7 @@
         </section>
         <section>
           <h2>Point of View</h2>
-          <p>Press<strong>ESC</strong>to enter the slide overview.</p>
+          <p>Press <strong>ESC</strong> to enter the slide overview.</p>
           <p>Hold down alt and click on any element to zoom in on it using <a href="http://lab.hakim.se/zoom-js">zoom.js</a>. Alt + click anywhere to zoom back out.</p>
         </section>
         <section>
@@ -120,7 +120,7 @@
         <section id="themes">
           <h2>Themes</h2>
           <p>Reveal.js comes with a few themes built in:<br><a href="?#/themes">Default </a>- <a href="?theme=sky#/themes">Sky </a>- <a href="?theme=beige#/themes">Beige </a>- <a href="?theme=simple#/themes">Simple </a>- <a href="?theme=serif#/themes">Serif </a>- <a href="?theme=night#/themes">Night </a><br><a href="?theme=moon#/themes">Moon </a>- <a href="?theme=solarized#/themes">Solarized </a></p>
-          <p><small>* Theme demos are loaded after the presentation which leads to flicker. In production you should load your theme in the <code>&lt;head&gt; </code>using a <code>&lt;link&gt;</code>.</small></p>
+          <p><small>* Theme demos are loaded after the presentation which leads to flicker. In production you should load your theme in the <code>&lt;head&gt;</code> using a <code>&lt;link&gt;</code>.</small></p>
         </section>
         <section>
           <h2>Global State</h2>
