Updated title and added co-author to first slide

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>SW2014</title>
+    <title>Reveal.js Enhanced</title>
     <meta name="description" content="A framework for easily creating beautiful presentations using the Jade templating language">
     <meta name="author" content="Hakim El Hattab &amp; Aksel Gresvig">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -35,8 +35,7 @@
         <section>
           <h1>Reveal.js Enhanced</h1>
           <h3>Technical HTML Presentations Made Easy</h3>
-          <p><small>
-              <Created>by <a href="http://hakim.se">Hakim El Hattab</a>/<a href="http://twitter.com/hakimel">@hakimel</a> & <a href="http://blog.akselgresvig.com">Aksel Gresvig</a></Created></small></p>
+          <p><small>Created by <a href="http://hakim.se">Hakim El Hattab</a>/<a href="http://twitter.com/hakimel">@hakimel</a> & <a href="http://blog.akselgresvig.com">Aksel Gresvig</a></small></p>
         </section>
         <section>
           <h2>Heads Up</h2>
