Updated README with expanded Jade example

--- a/index.html
+++ b/index.html
@@ -46,14 +46,19 @@
           </p>
           <aside class="notes">Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).</aside>
         </section>
-        <!--Example of nested vertical slides 
-        -->
+        <!-- Example of nested vertical slides -->
         <section>
           <section>
             <h2>Vertical Slides</h2>
-            <p>
+            <p class="fragment">
               <Slides>can be nested inside of other slides, try pressing <a href="#" class="navigate-down">down</a>.</Slides>
-            </p><a href="#" class="image navigate-down"><img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow"></a>
+            </p><a href="#" class="fragment image navigate-down"><img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow"></a>
+            <aside data-markdown class="notes">
+              * These are my notes
+              * which are very handy
+              * during a presentation
+              * and in **markdown**!
+            </aside>
           </section>
           <section>
             <h2>Basement Level 1</h2>
